  * fixed OSS mixer disabling itself after first playlist entry
  * improved overlay blending quality, fixed subtitles with XShm
  * improved support for transport streams
  * new plugin for DVB subtitles
  * support realplayer codecs on AMD64
  * fixed restoring xv settings on exit for some frontends
  * UTF-8 support for cddb (freedb) client
  * identify AAC, MPEG4 and H264 on transport streams

xine-lib (1-rc7)
  * Build system improvements: replacement functions, better work with headers
  * Set the codec name for Real Media even if we can't play the files
  * Fix win32 playback on recent versions of Linux
  * Added cropping capability to some video_out drivers (Xv, XvMC, vidix).
    automatic software cropping is provided for drivers not supporting it.
  * Fixed displaying of mpeg2 files where width/height is not a multiple of 16
    (these files required cropping after decoding)
  * Fix crashes with some input plugins when no audio output was available
  * Windows ports updates and cleanups
  * new xxmc driver supporting XvMC with extended vld (for VIA CLE266), 
    idct and mocomp accelerations. includes automatic Xv fallback for 
    non-mpeg streams. supports overlays and OSD.
  * suggested using the libXvMCW so xine won't depend on any vendor
    specific library. you can get the old behaviour (not recommended)
    using ./configure --with-xvmc-lib=XvMCNVIDIA. 
    The wrapper library libXvMCW is present in Xorg CVS or downloadable 
    standalone from http://sourceforge.net/projects/unichrome. 
    It will dlopen a hardware-specific XvMC library at runtime. 
  * Some fixes for crashes when trying to play encrypted DVDs without libdvdcss
  * DXR3: fixed some rare audio dropouts
  * DXR3: fixed forced subtitle handling; this fixes missing subtitles in
    "The Lord of the Rings - The Two Towers"
  * fixed wrong subtitle appearing in the trailer of "Girl, Interrupted" RC2
  * fixed "NAV packet expected, but none found" error when toggling between